# HFB_modified

./: .gitignore  CMakeLists.txt  README.md
PPDGI/: CMakeLists.txt  HLT.cpp
PPDGI/HLT_ad1/: ElgamalTable.cpp  ElgamalTable.h  HLT_ad1.cpp  HLT_ad1.h  hhh.cpp
PPDGI/HLT_ad2/: CMakeLists.txt  HLT_ad2.cpp  HLT_ad2.h
PPDGI/HLT_basic/: BasicElgamalTable.cpp  BasicElgamalTable.h  BasicSealTable.cpp  BasicSealTable.h  BasicStrategyTable.cpp  BasicStrategyTable.h  CMakeLists.txt
PPDGI/HLT_basic/HLT_basic_bfv/: HLT_basic_bfv.cpp
PPDGI/HLT_basic/HLT_basic_elgamal/: HLT_basic_elgamal.cpp  HLT_basic_elgamal.h
dectree/: CMakeLists.txt  decision_tree_test.cpp  ot_one.cpp  ot_three.cpp  ot_two.cpp
dectree/common/: dectree.cpp  dectree.h
include/: CMakeLists.txt
include/HFB/: OTOfflineUtile.h  OTOneUtil.h  OTThreeUtil.h  OTTwoUtil.h  err.h  sealtable.h  strategytb.h
seal/: CMakeLists.txt
src/: CMakeLists.txt  OTOfflineUtile.cpp  OTOneUtil.cpp  OTThreeUtil.cpp  OTTwoUtil.cpp  err.cpp  sealtable.cpp  strategytb.cpp
swig/: pk_file  pr_file  setup.py  test.py  treePredict.i  treePredict.py  treePredict_wrap.cxx  treemodel.cxx  treemodel.h  treeofflineOT.cxx  treeofflineOT.h  treeuser.cxx  treeuser.h
test/: CMakeLists.txt  ot_one.cpp  ot_three.cpp  ot_two.cpp  test.cpp  test.h
